--- a/current/examples/simple_simulations/two_gaussians.html
+++ b/current/examples/simple_simulations/two_gaussians.html
@@ -77,15 +77,9 @@
 <span class="sd">&quot;&quot;&quot;</span>
 
 
-<span class="c"># If running from hyperspy&#39;s interactive the next two imports can be omitted</span>
-<span class="c"># omitted (i.e. the next 4 lines)</span>
-<span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>
-<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="kn">as</span> <span class="nn">plt</span>
-
-<span class="kn">from</span> <span class="nn">hyperspy.signals.spectrum</span> <span class="kn">import</span> <span class="n">Spectrum</span>
 
 <span class="c"># Create an empty spectrum</span>
-<span class="p">({</span><span class="s">&#39;data&#39;</span> <span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">zeros</span><span class="p">((</span><span class="mi">32</span><span class="p">,</span><span class="mi">32</span><span class="p">,</span><span class="mi">1024</span><span class="p">))})</span>
+<span class="n">s</span> <span class="o">=</span> <span class="n">signals</span><span class="o">.</span><span class="n">Spectrum</span><span class="p">({</span><span class="s">&#39;data&#39;</span> <span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">zeros</span><span class="p">((</span><span class="mi">32</span><span class="p">,</span><span class="mi">32</span><span class="p">,</span><span class="mi">1024</span><span class="p">))})</span>
 
 <span class="c"># Generate some simple data: two Gaussians with random centers and area</span>
 
@@ -132,10 +126,6 @@
 <span class="c"># Plot the result</span>
 
 <span class="n">s</span><span class="o">.</span><span class="n">plot</span><span class="p">()</span>
-
-<span class="c"># If running from hyperspy&#39;s interactive console the next line can be</span>
-<span class="c"># omitted</span>
-<span class="n">plt</span><span class="o">.</span><span class="n">show</span><span class="p">()</span>
 </pre></div>
 </div>
 <p>Keywords: hyperspy, example, codex (see <em class="xref std std-ref">how-to-search-examples</em>)</p>
@@ -189,7 +179,7 @@
     </div>
     <div class="footer">
         &copy; Copyright 2012, The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
     </div>
   </body>
 </html>
