--- a/dev/examples/file_IO/aggregate_load.html
+++ b/dev/examples/file_IO/aggregate_load.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>file_IO example code: aggregate_load.py &mdash; Hyperspy 0.5 documentation</title>
+    <title>file_IO example code: aggregate_load.py &mdash; Hyperspy 0.5.1+dev documentation</title>
     
     <link rel="stylesheet" href="../../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.5',
+        VERSION:     '0.5.1+dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="../../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.5 documentation" href="../../index.html" />
+    <link rel="top" title="Hyperspy 0.5.1+dev documentation" href="../../index.html" />
  
 <script type="text/javascript">
 
@@ -57,7 +57,7 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.5 documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.5.1+dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -165,7 +165,7 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.5 documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.5.1+dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
