--- a/dev/examples/index.html
+++ b/dev/examples/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Hyperspy Examples &mdash; Hyperspy 0.5.1+dev documentation</title>
+    <title>Hyperspy Examples &mdash; Hyperspy 0.6 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.5.1+dev',
+        VERSION:     '0.6',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.5.1+dev documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.6 documentation" href="../index.html" />
  
 <script type="text/javascript">
 
@@ -57,7 +57,7 @@
         <li class="right" >
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.5.1+dev documentation</a> &raquo;</li> 
+        <li><a href="../index.html">Hyperspy 0.6 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -72,9 +72,9 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.5.1+dev</td>
+<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.6</td>
 </tr>
-<tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">May 25, 2013</td>
+<tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">June 04, 2013</td>
 </tr>
 </tbody>
 </table>
@@ -147,7 +147,7 @@
         <li class="right" >
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.5.1+dev documentation</a> &raquo;</li> 
+        <li><a href="../index.html">Hyperspy 0.6 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
