--- a/dev/user_guide/index.html
+++ b/dev/user_guide/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Hyperspy User Guide (DRAFT) &mdash; Hyperspy 0.5.1+dev documentation</title>
+    <title>Hyperspy User Guide (DRAFT) &mdash; Hyperspy 0.6 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.5.1+dev',
+        VERSION:     '0.6',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.5.1+dev documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.6 documentation" href="../index.html" />
     <link rel="next" title="Introduction" href="intro.html" />
     <link rel="prev" title="Welcome to Hyperspy’s documentation!" href="../index.html" />
  
@@ -65,7 +65,7 @@
         <li class="right" >
           <a href="../index.html" title="Welcome to Hyperspy’s documentation!"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.5.1+dev documentation</a> &raquo;</li> 
+        <li><a href="../index.html">Hyperspy 0.6 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -204,7 +204,7 @@
         <li class="right" >
           <a href="../index.html" title="Welcome to Hyperspy’s documentation!"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.5.1+dev documentation</a> &raquo;</li> 
+        <li><a href="../index.html">Hyperspy 0.6 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
