--- a/dev/user_guide/examples/index.html
+++ b/dev/user_guide/examples/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>HyperSpy Examples &mdash; HyperSpy 0.6+dev documentation</title>
+    <title>HyperSpy Examples &mdash; HyperSpy 0.7 documentation</title>
     
     <link rel="stylesheet" href="../../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.6+dev',
+        VERSION:     '0.7',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="../../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.6+dev documentation" href="../../index.html" />
+    <link rel="top" title="HyperSpy 0.7 documentation" href="../../index.html" />
  
 <script type="text/javascript">
 
@@ -55,7 +55,7 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">HyperSpy 0.7 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -70,7 +70,7 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.6+dev</td>
+<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.7</td>
 </tr>
 <tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">April 03, 2014</td>
 </tr>
@@ -127,7 +127,7 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">HyperSpy 0.7 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
