--- a/dev/user_guide/install.html
+++ b/dev/user_guide/install.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Installing HyperSpy &mdash; HyperSpy 0.6+dev documentation</title>
+    <title>Installing HyperSpy &mdash; HyperSpy 0.7 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6+dev',
+        VERSION:     '0.7',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.6+dev documentation" href="../index.html" />
+    <link rel="top" title="HyperSpy 0.7 documentation" href="../index.html" />
     <link rel="up" title="HyperSpy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Getting started" href="getting_started.html" />
     <link rel="prev" title="What’s new" href="what_is_new.html" />
@@ -64,7 +64,7 @@
         <li class="right" >
           <a href="what_is_new.html" title="What’s new"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">HyperSpy 0.7 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -325,7 +325,7 @@ adding more RAM to your computer.</li>
         <li class="right" >
           <a href="what_is_new.html" title="What’s new"
              >previous</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">HyperSpy 0.7 documentation</a> &raquo;</li>
           <li><a href="index.html" >HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
