--- a/current/user_guide/mva.html
+++ b/current/user_guide/mva.html
@@ -28,7 +28,7 @@
     <link rel="top" title="HyperSpy 0.7 documentation" href="../index.html" />
     <link rel="up" title="HyperSpy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Curve fitting" href="model.html" />
-    <link rel="prev" title="Data visualisation" href="visualisation.html" />
+    <link rel="prev" title="Data visualization" href="visualisation.html" />
  
 <script type="text/javascript">
 
@@ -62,7 +62,7 @@
           <a href="model.html" title="Curve fitting"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="visualisation.html" title="Data visualisation"
+          <a href="visualisation.html" title="Data visualization"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">HyperSpy 0.7 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
@@ -358,7 +358,7 @@ machine learning structure.</p>
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="visualisation.html"
-                        title="previous chapter">Data visualisation</a></p>
+                        title="previous chapter">Data visualization</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="model.html"
                         title="next chapter">Curve fitting</a></p>
@@ -402,7 +402,7 @@ machine learning structure.</p>
           <a href="model.html" title="Curve fitting"
              >next</a> |</li>
         <li class="right" >
-          <a href="visualisation.html" title="Data visualisation"
+          <a href="visualisation.html" title="Data visualization"
              >previous</a> |</li>
         <li><a href="../index.html">HyperSpy 0.7 documentation</a> &raquo;</li>
           <li><a href="index.html" >HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
